--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
 </nav>
   </footer>
 
+
+  <!-- TODO: figure out if we need these polyfills to support IE11, EDGE, CHROME, SAFARI, FF -->
   <!-- Browser polyfills (mainly for IE) -->
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 
